# cmfa

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: render_docs.yml  run_pytest.yml
cmfa/: __init__.py  data_preparation.py  demo_compositional_model.py  emu.py  emu_algorithm.py  forward_simulation.py  inference_configuration.py  prepare_data.py  sample.py  stan_input_functions.py  test.ipynb  tutorial.ipynb
cmfa/fluxomics_data/: compound.py  emu.py  emu_map.py  flux_measurement.py  fluxomics_dataset.py  measurement.py  mid_measurement.py  reaction.py  reaction_network.py  tracer.py
cmfa/stan/: model.stan  ragged_comp_demo.stan
data/test_data/: model.json
docs/: background.qmd  bibliography.bib  report.html  report.qmd
inferences/first_inference/: config.toml
plots/: readme.md
tests/test_integration/: test_data_preparation.py  test_load_data.py
tests/test_unit/: test_flux_measurement.py  test_fluxomics_dataset.py  test_inference_configuration.py  test_measurement.py  test_mid_measurement.py  test_reaction_network.py  test_tracer.py  test_util.py
