[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cmfa"
authors = [
    {name = "Teddy Groves and Te Chen", email = "tedgro@biosustain.dtu.dk"},
]
version = "0.0.1"
description = "Compositional Metabolic Flux Analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "arviz",
    "cmdstanpy",
    "jupyter",
    "numpy",
    "pandas",
    "pandera@git+https://github.com/unionai-oss/pandera.git@main",
    "pydantic >= 2.0.0",
    "pyspark",
    "scipy",
    "scikit-learn",
    "toml",
]
[project.optional-dependencies]
development = [
    "black",
    "pre-commit",
    "pytest",
    "ruff"
]

[tool.setuptools]
packages = ["cmfa"]

[tool.black]
line-length = 80
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[tool.pylint.messages_control]
disable = "C0330, C0326, C0111"

[tool.pylint.format]
max-line-length = "80"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
# Set the path to your project's source files
include = ["cmfa/**/*.py", "tests/**/*.py"]

# Optionally, you can also configure ruff to exclude certain files or directories
exclude = [
    "build/**",
    "dist/**",
    "*.egg-info/**",
    "**/__pycache__/**",
    ".venv/**",
]
line-length = 88

[tool.ruff.lint]
select = [
    "D",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
